build based on 08516f6

--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -80,8 +80,8 @@ The following packages will be downloaded:
     fonttools-4.38.0           |  py310h5764c6d_1         1.9 MB  conda-forge
     freetype-2.12.1            |       hca18f0e_0         884 KB  conda-forge
     gettext-0.21.1             |       h27087fc_0         4.1 MB  conda-forge
-    glib-2.74.1                |       h6239696_0         475 KB  conda-forge
-    glib-tools-2.74.1          |       h6239696_0         107 KB  conda-forge
+    glib-2.74.1                |       h6239696_1         474 KB  conda-forge
+    glib-tools-2.74.1          |       h6239696_1         107 KB  conda-forge
     gst-plugins-base-1.21.1    |       h3e40eee_1         2.9 MB  conda-forge
     gstreamer-1.21.1           |       hd4edc92_1         2.0 MB  conda-forge
     icu-70.1                   |       h27087fc_0        13.5 MB  conda-forge
@@ -105,7 +105,7 @@ The following packages will be downloaded:
     libedit-3.1.20191231       |       he28a2e2_2         121 KB  conda-forge
     libevent-2.1.10            |       h9b69904_4         1.1 MB  conda-forge
     libflac-1.4.2              |       h27087fc_0         411 KB  conda-forge
-    libglib-2.74.1             |       h7a41b64_0         3.1 MB  conda-forge
+    libglib-2.74.1             |       h606061b_1         3.1 MB  conda-forge
     libiconv-1.17              |       h166bdaf_0         1.4 MB  conda-forge
     libllvm15-15.0.4           |       h63197d8_0        37.4 MB  conda-forge
     libogg-1.3.4               |       h7f98852_1         206 KB  conda-forge
@@ -132,7 +132,7 @@ The following packages will be downloaded:
     openjpeg-2.5.0             |       h7d73246_1         533 KB  conda-forge
     openssl-1.1.1s             |       h166bdaf_0         2.1 MB  conda-forge
     packaging-21.3             |     pyhd8ed1ab_0          36 KB  conda-forge
-    pcre2-10.37                |       hc3806b6_1         1.1 MB  conda-forge
+    pcre2-10.40                |       hc3806b6_0         2.3 MB  conda-forge
     pillow-9.2.0               |  py310h454ad03_3        45.3 MB  conda-forge
     ply-3.11                   |             py_1          44 KB  conda-forge
     pthread-stubs-0.4          |    h36c2ea0_1001           5 KB  conda-forge
@@ -158,7 +158,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       294.1 MB
+                                           Total:       295.4 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -181,8 +181,8 @@ The following NEW packages will be INSTALLED:
   fonttools          conda-forge/linux-64::fonttools-4.38.0-py310h5764c6d_1 None
   freetype           conda-forge/linux-64::freetype-2.12.1-hca18f0e_0 None
   gettext            conda-forge/linux-64::gettext-0.21.1-h27087fc_0 None
-  glib               conda-forge/linux-64::glib-2.74.1-h6239696_0 None
-  glib-tools         conda-forge/linux-64::glib-tools-2.74.1-h6239696_0 None
+  glib               conda-forge/linux-64::glib-2.74.1-h6239696_1 None
+  glib-tools         conda-forge/linux-64::glib-tools-2.74.1-h6239696_1 None
   gst-plugins-base   conda-forge/linux-64::gst-plugins-base-1.21.1-h3e40eee_1 None
   gstreamer          conda-forge/linux-64::gstreamer-1.21.1-hd4edc92_1 None
   icu                conda-forge/linux-64::icu-70.1-h27087fc_0 None
@@ -206,7 +206,7 @@ The following NEW packages will be INSTALLED:
   libedit            conda-forge/linux-64::libedit-3.1.20191231-he28a2e2_2 None
   libevent           conda-forge/linux-64::libevent-2.1.10-h9b69904_4 None
   libflac            conda-forge/linux-64::libflac-1.4.2-h27087fc_0 None
-  libglib            conda-forge/linux-64::libglib-2.74.1-h7a41b64_0 None
+  libglib            conda-forge/linux-64::libglib-2.74.1-h606061b_1 None
   libiconv           conda-forge/linux-64::libiconv-1.17-h166bdaf_0 None
   libllvm15          conda-forge/linux-64::libllvm15-15.0.4-h63197d8_0 None
   libogg             conda-forge/linux-64::libogg-1.3.4-h7f98852_1 None
@@ -232,7 +232,7 @@ The following NEW packages will be INSTALLED:
   nss                conda-forge/linux-64::nss-3.78-h2350873_0 None
   openjpeg           conda-forge/linux-64::openjpeg-2.5.0-h7d73246_1 None
   packaging          conda-forge/noarch::packaging-21.3-pyhd8ed1ab_0 None
-  pcre2              conda-forge/linux-64::pcre2-10.37-hc3806b6_1 None
+  pcre2              conda-forge/linux-64::pcre2-10.40-hc3806b6_0 None
   pillow             conda-forge/linux-64::pillow-9.2.0-py310h454ad03_3 None
   ply                conda-forge/noarch::ply-3.11-py_1 None
   pthread-stubs      conda-forge/linux-64::pthread-stubs-0.4-h36c2ea0_1001 None
@@ -314,4 +314,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Saturday 5 November 2022 12:24">Saturday 5 November 2022</span>. Using Julia version 1.8.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Saturday 5 November 2022 18:17">Saturday 5 November 2022</span>. Using Julia version 1.8.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
