--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -84,6 +84,7 @@ The following packages will be downloaded:
     glib-tools-2.74.1          |       h6239696_1         107 KB  conda-forge
     gst-plugins-base-1.21.2    |       h3e40eee_0         2.5 MB  conda-forge
     gstreamer-1.21.2           |       hd4edc92_0         1.9 MB  conda-forge
+    gstreamer-orc-0.4.33       |       h166bdaf_0         299 KB  conda-forge
     icu-70.1                   |       h27087fc_0        13.5 MB  conda-forge
     jack-1.9.21                |       he978b8e_1         530 KB  conda-forge
     jpeg-9e                    |       h166bdaf_2         269 KB  conda-forge
@@ -105,7 +106,9 @@ The following packages will be downloaded:
     libedit-3.1.20191231       |       he28a2e2_2         121 KB  conda-forge
     libevent-2.1.10            |       h9b69904_4         1.1 MB  conda-forge
     libflac-1.4.2              |       h27087fc_0         411 KB  conda-forge
+    libgcrypt-1.10.1           |       h166bdaf_0         703 KB  conda-forge
     libglib-2.74.1             |       h606061b_1         3.1 MB  conda-forge
+    libgpg-error-1.45          |       hc0c96e0_0         286 KB  conda-forge
     libiconv-1.17              |       h166bdaf_0         1.4 MB  conda-forge
     libllvm15-15.0.5           |       h63197d8_0        37.4 MB  conda-forge
     libogg-1.3.4               |       h7f98852_1         206 KB  conda-forge
@@ -113,6 +116,7 @@ The following packages will be downloaded:
     libpng-1.6.38              |       h753d276_0         371 KB  conda-forge
     libpq-14.5                 |       hd77ab85_1         3.0 MB  conda-forge
     libsndfile-1.1.0           |       h27087fc_0         370 KB  conda-forge
+    libsystemd0-252            |       h2a991cd_0         384 KB  conda-forge
     libtiff-4.4.0              |       h55922b4_4         651 KB  conda-forge
     libtool-2.4.6              |    h9c3ff4c_1008         511 KB  conda-forge
     libudev1-252               |       h166bdaf_0         118 KB  conda-forge
@@ -121,6 +125,7 @@ The following packages will be downloaded:
     libxcb-1.13                |    h7f98852_1004         391 KB  conda-forge
     libxkbcommon-1.0.3         |       he3ba5ed_0         581 KB  conda-forge
     libxml2-2.10.3             |       h7463322_0         754 KB  conda-forge
+    lz4-c-1.9.3                |       h9c3ff4c_1         179 KB  conda-forge
     matplotlib-3.6.2           |  py310hff52083_0           7 KB  conda-forge
     matplotlib-base-3.6.2      |  py310h8d5ebf3_0         7.6 MB  conda-forge
     mpg123-1.30.2              |       h27087fc_1         512 KB  conda-forge
@@ -136,13 +141,13 @@ The following packages will be downloaded:
     pillow-9.2.0               |  py310h454ad03_3        45.3 MB  conda-forge
     ply-3.11                   |             py_1          44 KB  conda-forge
     pthread-stubs-0.4          |    h36c2ea0_1001           5 KB  conda-forge
-    pulseaudio-14.0            |      h0d2025b_11         1.7 MB  conda-forge
+    pulseaudio-16.1            |       h4a94279_0         1.7 MB  conda-forge
     pyparsing-3.0.9            |     pyhd8ed1ab_0          79 KB  conda-forge
     pyqt-5.15.7                |  py310h29803b5_2         6.2 MB  conda-forge
     pyqt5-sip-12.11.0          |  py310hd8f1fbe_2          86 KB  conda-forge
     python-3.10.6              |h582c2e5_0_cpython        29.0 MB  conda-forge
     python-dateutil-2.8.2      |     pyhd8ed1ab_0         240 KB  conda-forge
-    qt-main-5.15.6             |       hd477bba_1        61.6 MB  conda-forge
+    qt-main-5.15.6             |       h7acdfc8_2        46.1 MB  conda-forge
     sip-6.7.4                  |  py310hd8f1fbe_0         550 KB  conda-forge
     six-1.16.0                 |     pyh6c4a22f_0          14 KB  conda-forge
     sqlite-3.40.0              |       h4ff8645_0         801 KB  conda-forge
@@ -158,7 +163,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       294.9 MB
+                                           Total:       281.2 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -185,6 +190,7 @@ The following NEW packages will be INSTALLED:
   glib-tools         conda-forge/linux-64::glib-tools-2.74.1-h6239696_1 None
   gst-plugins-base   conda-forge/linux-64::gst-plugins-base-1.21.2-h3e40eee_0 None
   gstreamer          conda-forge/linux-64::gstreamer-1.21.2-hd4edc92_0 None
+  gstreamer-orc      conda-forge/linux-64::gstreamer-orc-0.4.33-h166bdaf_0 None
   icu                conda-forge/linux-64::icu-70.1-h27087fc_0 None
   jack               conda-forge/linux-64::jack-1.9.21-he978b8e_1 None
   jpeg               conda-forge/linux-64::jpeg-9e-h166bdaf_2 None
@@ -206,7 +212,9 @@ The following NEW packages will be INSTALLED:
   libedit            conda-forge/linux-64::libedit-3.1.20191231-he28a2e2_2 None
   libevent           conda-forge/linux-64::libevent-2.1.10-h9b69904_4 None
   libflac            conda-forge/linux-64::libflac-1.4.2-h27087fc_0 None
+  libgcrypt          conda-forge/linux-64::libgcrypt-1.10.1-h166bdaf_0 None
   libglib            conda-forge/linux-64::libglib-2.74.1-h606061b_1 None
+  libgpg-error       conda-forge/linux-64::libgpg-error-1.45-hc0c96e0_0 None
   libiconv           conda-forge/linux-64::libiconv-1.17-h166bdaf_0 None
   libllvm15          conda-forge/linux-64::libllvm15-15.0.5-h63197d8_0 None
   libogg             conda-forge/linux-64::libogg-1.3.4-h7f98852_1 None
@@ -214,6 +222,7 @@ The following NEW packages will be INSTALLED:
   libpng             conda-forge/linux-64::libpng-1.6.38-h753d276_0 None
   libpq              conda-forge/linux-64::libpq-14.5-hd77ab85_1 None
   libsndfile         conda-forge/linux-64::libsndfile-1.1.0-h27087fc_0 None
+  libsystemd0        conda-forge/linux-64::libsystemd0-252-h2a991cd_0 None
   libtiff            conda-forge/linux-64::libtiff-4.4.0-h55922b4_4 None
   libtool            conda-forge/linux-64::libtool-2.4.6-h9c3ff4c_1008 None
   libudev1           conda-forge/linux-64::libudev1-252-h166bdaf_0 None
@@ -222,6 +231,7 @@ The following NEW packages will be INSTALLED:
   libxcb             conda-forge/linux-64::libxcb-1.13-h7f98852_1004 None
   libxkbcommon       conda-forge/linux-64::libxkbcommon-1.0.3-he3ba5ed_0 None
   libxml2            conda-forge/linux-64::libxml2-2.10.3-h7463322_0 None
+  lz4-c              conda-forge/linux-64::lz4-c-1.9.3-h9c3ff4c_1 None
   matplotlib         conda-forge/linux-64::matplotlib-3.6.2-py310hff52083_0 None
   matplotlib-base    conda-forge/linux-64::matplotlib-base-3.6.2-py310h8d5ebf3_0 None
   mpg123             conda-forge/linux-64::mpg123-1.30.2-h27087fc_1 None
@@ -236,12 +246,12 @@ The following NEW packages will be INSTALLED:
   pillow             conda-forge/linux-64::pillow-9.2.0-py310h454ad03_3 None
   ply                conda-forge/noarch::ply-3.11-py_1 None
   pthread-stubs      conda-forge/linux-64::pthread-stubs-0.4-h36c2ea0_1001 None
-  pulseaudio         conda-forge/linux-64::pulseaudio-14.0-h0d2025b_11 None
+  pulseaudio         conda-forge/linux-64::pulseaudio-16.1-h4a94279_0 None
   pyparsing          conda-forge/noarch::pyparsing-3.0.9-pyhd8ed1ab_0 None
   pyqt               conda-forge/linux-64::pyqt-5.15.7-py310h29803b5_2 None
   pyqt5-sip          conda-forge/linux-64::pyqt5-sip-12.11.0-py310hd8f1fbe_2 None
   python-dateutil    conda-forge/noarch::python-dateutil-2.8.2-pyhd8ed1ab_0 None
-  qt-main            conda-forge/linux-64::qt-main-5.15.6-hd477bba_1 None
+  qt-main            conda-forge/linux-64::qt-main-5.15.6-h7acdfc8_2 None
   sip                conda-forge/linux-64::sip-6.7.4-py310hd8f1fbe_0 None
   six                conda-forge/noarch::six-1.16.0-pyh6c4a22f_0 None
   sqlite             conda-forge/linux-64::sqlite-3.40.0-h4ff8645_0 None
@@ -311,4 +321,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Sunday 20 November 2022 18:16">Sunday 20 November 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 21 November 2022 00:53">Monday 21 November 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
