--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -145,10 +145,10 @@ The following packages will be downloaded:
     pyparsing-3.0.9            |     pyhd8ed1ab_0          79 KB  conda-forge
     pyqt-5.15.7                |  py310h29803b5_2         6.2 MB  conda-forge
     pyqt5-sip-12.11.0          |  py310hd8f1fbe_2          86 KB  conda-forge
-    python-3.10.6              |h582c2e5_0_cpython        29.0 MB  conda-forge
+    python-3.10.7              |h257c98d_0_cpython        22.1 MB  conda-forge
     python-dateutil-2.8.2      |     pyhd8ed1ab_0         240 KB  conda-forge
     qt-main-5.15.6             |       h7acdfc8_2        46.1 MB  conda-forge
-    sip-6.7.4                  |  py310hd8f1fbe_0         550 KB  conda-forge
+    sip-6.7.5                  |  py310hd8f1fbe_0         467 KB  conda-forge
     six-1.16.0                 |     pyh6c4a22f_0          14 KB  conda-forge
     sqlite-3.40.0              |       h4ff8645_0         801 KB  conda-forge
     toml-0.10.2                |     pyhd8ed1ab_0          18 KB  conda-forge
@@ -163,7 +163,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       281.2 MB
+                                           Total:       274.2 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -252,7 +252,7 @@ The following NEW packages will be INSTALLED:
   pyqt5-sip          conda-forge/linux-64::pyqt5-sip-12.11.0-py310hd8f1fbe_2 None
   python-dateutil    conda-forge/noarch::python-dateutil-2.8.2-pyhd8ed1ab_0 None
   qt-main            conda-forge/linux-64::qt-main-5.15.6-h7acdfc8_2 None
-  sip                conda-forge/linux-64::sip-6.7.4-py310hd8f1fbe_0 None
+  sip                conda-forge/linux-64::sip-6.7.5-py310hd8f1fbe_0 None
   six                conda-forge/noarch::six-1.16.0-pyh6c4a22f_0 None
   sqlite             conda-forge/linux-64::sqlite-3.40.0-h4ff8645_0 None
   toml               conda-forge/noarch::toml-0.10.2-pyhd8ed1ab_0 None
@@ -267,11 +267,14 @@ The following NEW packages will be INSTALLED:
   xorg-libxdmcp      conda-forge/linux-64::xorg-libxdmcp-1.1.3-h7f98852_0 None
   zstd               conda-forge/linux-64::zstd-1.5.2-h6239696_4 None
 
+The following packages will be UPDATED:
+
+  python                          3.10.6-ha86cf86_0_cpython --&gt; 3.10.7-h257c98d_0_cpython None
+
 The following packages will be DOWNGRADED:
 
   cryptography                       38.0.3-py310h600f1e7_0 --&gt; 38.0.3-py310h597c629_0 None
   openssl                                  3.0.7-h166bdaf_0 --&gt; 1.1.1s-h166bdaf_0 None
-  python                          3.10.6-ha86cf86_0_cpython --&gt; 3.10.6-h582c2e5_0_cpython None
 
 
 Preparing transaction: ...working... done
@@ -321,4 +324,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 21 November 2022 12:23">Monday 21 November 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 21 November 2022 18:18">Monday 21 November 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
