--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -113,7 +113,7 @@ The following packages will be downloaded:
     libllvm15-15.0.5           |       h63197d8_0        37.4 MB  conda-forge
     libogg-1.3.4               |       h7f98852_1         206 KB  conda-forge
     libopus-1.3.1              |       h7f98852_1         255 KB  conda-forge
-    libpng-1.6.38              |       h753d276_0         371 KB  conda-forge
+    libpng-1.6.39              |       h753d276_0         276 KB  conda-forge
     libpq-14.5                 |       hd77ab85_1         3.0 MB  conda-forge
     libsndfile-1.1.0           |       h27087fc_0         370 KB  conda-forge
     libsystemd0-252            |       h2a991cd_0         384 KB  conda-forge
@@ -147,6 +147,7 @@ The following packages will be downloaded:
     pyqt5-sip-12.11.0          |  py310hd8f1fbe_2          86 KB  conda-forge
     python-3.10.7              |h257c98d_0_cpython        22.1 MB  conda-forge
     python-dateutil-2.8.2      |     pyhd8ed1ab_0         240 KB  conda-forge
+    python_abi-3.10            |          3_cp310           6 KB  conda-forge
     qt-main-5.15.6             |       h7acdfc8_2        46.1 MB  conda-forge
     sip-6.7.5                  |  py310hd8f1fbe_0         467 KB  conda-forge
     six-1.16.0                 |     pyh6c4a22f_0          14 KB  conda-forge
@@ -219,7 +220,7 @@ The following NEW packages will be INSTALLED:
   libllvm15          conda-forge/linux-64::libllvm15-15.0.5-h63197d8_0 None
   libogg             conda-forge/linux-64::libogg-1.3.4-h7f98852_1 None
   libopus            conda-forge/linux-64::libopus-1.3.1-h7f98852_1 None
-  libpng             conda-forge/linux-64::libpng-1.6.38-h753d276_0 None
+  libpng             conda-forge/linux-64::libpng-1.6.39-h753d276_0 None
   libpq              conda-forge/linux-64::libpq-14.5-hd77ab85_1 None
   libsndfile         conda-forge/linux-64::libsndfile-1.1.0-h27087fc_0 None
   libsystemd0        conda-forge/linux-64::libsystemd0-252-h2a991cd_0 None
@@ -270,6 +271,7 @@ The following NEW packages will be INSTALLED:
 The following packages will be UPDATED:
 
   python                          3.10.6-ha86cf86_0_cpython --&gt; 3.10.7-h257c98d_0_cpython None
+  python_abi                                   3.10-2_cp310 --&gt; 3.10-3_cp310 None
 
 The following packages will be DOWNGRADED:
 
@@ -324,4 +326,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 21 November 2022 18:18">Monday 21 November 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Tuesday 22 November 2022 00:56">Tuesday 22 November 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
