--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -114,7 +114,7 @@ The following packages will be downloaded:
     libopus-1.3.1              |       h7f98852_1         255 KB  conda-forge
     libpng-1.6.39              |       h753d276_0         276 KB  conda-forge
     libpq-15.1                 |       h67c24c5_1         2.4 MB  conda-forge
-    libsndfile-1.1.0           |       h27087fc_0         370 KB  conda-forge
+    libsndfile-1.1.0           |       hcb278e6_1         341 KB  conda-forge
     libsystemd0-252            |       h2a991cd_0         384 KB  conda-forge
     libtiff-4.4.0              |       h55922b4_4         651 KB  conda-forge
     libtool-2.4.6              |    h9c3ff4c_1008         511 KB  conda-forge
@@ -127,7 +127,7 @@ The following packages will be downloaded:
     lz4-c-1.9.3                |       h9c3ff4c_1         179 KB  conda-forge
     matplotlib-3.6.2           |  py310hff52083_0           7 KB  conda-forge
     matplotlib-base-3.6.2      |  py310h8d5ebf3_0         7.6 MB  conda-forge
-    mpg123-1.30.2              |       h27087fc_1         512 KB  conda-forge
+    mpg123-1.31.1              |       h27087fc_0         522 KB  conda-forge
     munkres-1.1.4              |     pyh9f0ad1d_0          12 KB  conda-forge
     mysql-common-8.0.31        |       h26416b9_0         1.9 MB  conda-forge
     mysql-libs-8.0.31          |       hbc51c84_0         1.9 MB  conda-forge
@@ -159,7 +159,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       239.6 MB
+                                           Total:       239.5 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -217,7 +217,7 @@ The following NEW packages will be INSTALLED:
   libopus            conda-forge/linux-64::libopus-1.3.1-h7f98852_1 None
   libpng             conda-forge/linux-64::libpng-1.6.39-h753d276_0 None
   libpq              conda-forge/linux-64::libpq-15.1-h67c24c5_1 None
-  libsndfile         conda-forge/linux-64::libsndfile-1.1.0-h27087fc_0 None
+  libsndfile         conda-forge/linux-64::libsndfile-1.1.0-hcb278e6_1 None
   libsystemd0        conda-forge/linux-64::libsystemd0-252-h2a991cd_0 None
   libtiff            conda-forge/linux-64::libtiff-4.4.0-h55922b4_4 None
   libtool            conda-forge/linux-64::libtool-2.4.6-h9c3ff4c_1008 None
@@ -230,7 +230,7 @@ The following NEW packages will be INSTALLED:
   lz4-c              conda-forge/linux-64::lz4-c-1.9.3-h9c3ff4c_1 None
   matplotlib         conda-forge/linux-64::matplotlib-3.6.2-py310hff52083_0 None
   matplotlib-base    conda-forge/linux-64::matplotlib-base-3.6.2-py310h8d5ebf3_0 None
-  mpg123             conda-forge/linux-64::mpg123-1.30.2-h27087fc_1 None
+  mpg123             conda-forge/linux-64::mpg123-1.31.1-h27087fc_0 None
   munkres            conda-forge/noarch::munkres-1.1.4-pyh9f0ad1d_0 None
   mysql-common       conda-forge/linux-64::mysql-common-8.0.31-h26416b9_0 None
   mysql-libs         conda-forge/linux-64::mysql-libs-8.0.31-hbc51c84_0 None
@@ -310,4 +310,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Sunday 4 December 2022 18:17">Sunday 4 December 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 5 December 2022 00:45">Monday 5 December 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
