build based on 08516f6

--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -89,7 +89,7 @@ The following packages will be downloaded:
     jpeg-9e                    |       h166bdaf_2         269 KB  conda-forge
     keyutils-1.6.1             |       h166bdaf_0         115 KB  conda-forge
     kiwisolver-1.4.4           |  py310hbf28c38_1          76 KB  conda-forge
-    krb5-1.19.3                |       h08a2579_0         1.4 MB  conda-forge
+    krb5-1.20.1                |       h81ceb04_0         1.3 MB  conda-forge
     lame-3.100                 |    h166bdaf_1003         496 KB  conda-forge
     lcms2-2.14                 |       h6ed2654_0         256 KB  conda-forge
     lerc-4.0.0                 |       h27087fc_0         275 KB  conda-forge
@@ -99,7 +99,7 @@ The following packages will be downloaded:
     libcap-2.66                |       ha37c62d_0          97 KB  conda-forge
     libclang-15.0.6            |default_h2e3cab8_0         129 KB  conda-forge
     libclang13-15.0.6          |default_h3a83d3e_0         9.0 MB  conda-forge
-    libcups-2.3.3              |       h3e49a29_2         4.5 MB  conda-forge
+    libcups-2.3.3              |       h36d4200_3         4.3 MB  conda-forge
     libdb-6.2.32               |       h9c3ff4c_0        23.3 MB  conda-forge
     libdeflate-1.14            |       h166bdaf_0          81 KB  conda-forge
     libedit-3.1.20191231       |       he28a2e2_2         121 KB  conda-forge
@@ -113,7 +113,7 @@ The following packages will be downloaded:
     libogg-1.3.4               |       h7f98852_1         206 KB  conda-forge
     libopus-1.3.1              |       h7f98852_1         255 KB  conda-forge
     libpng-1.6.39              |       h753d276_0         276 KB  conda-forge
-    libpq-15.1                 |       h67c24c5_1         2.4 MB  conda-forge
+    libpq-15.1                 |       hb675445_2         2.4 MB  conda-forge
     libsndfile-1.1.0           |       hcb278e6_1         341 KB  conda-forge
     libsystemd0-252            |       h2a991cd_0         384 KB  conda-forge
     libtiff-4.4.0              |       h82bc61c_5         473 KB  conda-forge
@@ -144,7 +144,7 @@ The following packages will be downloaded:
     pyqt-5.15.7                |  py310h29803b5_2         6.2 MB  conda-forge
     pyqt5-sip-12.11.0          |  py310hd8f1fbe_2          86 KB  conda-forge
     python-dateutil-2.8.2      |     pyhd8ed1ab_0         240 KB  conda-forge
-    qt-main-5.15.6             |       hafeba50_4        52.5 MB  conda-forge
+    qt-main-5.15.6             |       hf6cd601_5        52.3 MB  conda-forge
     sip-6.7.5                  |  py310hd8f1fbe_0         467 KB  conda-forge
     six-1.16.0                 |     pyh6c4a22f_0          14 KB  conda-forge
     toml-0.10.2                |     pyhd8ed1ab_0          18 KB  conda-forge
@@ -159,7 +159,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       243.5 MB
+                                           Total:       243.1 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -192,7 +192,7 @@ The following NEW packages will be INSTALLED:
   jpeg               conda-forge/linux-64::jpeg-9e-h166bdaf_2
   keyutils           conda-forge/linux-64::keyutils-1.6.1-h166bdaf_0
   kiwisolver         conda-forge/linux-64::kiwisolver-1.4.4-py310hbf28c38_1
-  krb5               conda-forge/linux-64::krb5-1.19.3-h08a2579_0
+  krb5               conda-forge/linux-64::krb5-1.20.1-h81ceb04_0
   lame               conda-forge/linux-64::lame-3.100-h166bdaf_1003
   lcms2              conda-forge/linux-64::lcms2-2.14-h6ed2654_0
   lerc               conda-forge/linux-64::lerc-4.0.0-h27087fc_0
@@ -202,7 +202,7 @@ The following NEW packages will be INSTALLED:
   libcap             conda-forge/linux-64::libcap-2.66-ha37c62d_0
   libclang           conda-forge/linux-64::libclang-15.0.6-default_h2e3cab8_0
   libclang13         conda-forge/linux-64::libclang13-15.0.6-default_h3a83d3e_0
-  libcups            conda-forge/linux-64::libcups-2.3.3-h3e49a29_2
+  libcups            conda-forge/linux-64::libcups-2.3.3-h36d4200_3
   libdb              conda-forge/linux-64::libdb-6.2.32-h9c3ff4c_0
   libdeflate         conda-forge/linux-64::libdeflate-1.14-h166bdaf_0
   libedit            conda-forge/linux-64::libedit-3.1.20191231-he28a2e2_2
@@ -216,7 +216,7 @@ The following NEW packages will be INSTALLED:
   libogg             conda-forge/linux-64::libogg-1.3.4-h7f98852_1
   libopus            conda-forge/linux-64::libopus-1.3.1-h7f98852_1
   libpng             conda-forge/linux-64::libpng-1.6.39-h753d276_0
-  libpq              conda-forge/linux-64::libpq-15.1-h67c24c5_1
+  libpq              conda-forge/linux-64::libpq-15.1-hb675445_2
   libsndfile         conda-forge/linux-64::libsndfile-1.1.0-hcb278e6_1
   libsystemd0        conda-forge/linux-64::libsystemd0-252-h2a991cd_0
   libtiff            conda-forge/linux-64::libtiff-4.4.0-h82bc61c_5
@@ -247,7 +247,7 @@ The following NEW packages will be INSTALLED:
   pyqt               conda-forge/linux-64::pyqt-5.15.7-py310h29803b5_2
   pyqt5-sip          conda-forge/linux-64::pyqt5-sip-12.11.0-py310hd8f1fbe_2
   python-dateutil    conda-forge/noarch::python-dateutil-2.8.2-pyhd8ed1ab_0
-  qt-main            conda-forge/linux-64::qt-main-5.15.6-hafeba50_4
+  qt-main            conda-forge/linux-64::qt-main-5.15.6-hf6cd601_5
   sip                conda-forge/linux-64::sip-6.7.5-py310hd8f1fbe_0
   six                conda-forge/noarch::six-1.16.0-pyh6c4a22f_0
   toml               conda-forge/noarch::toml-0.10.2-pyhd8ed1ab_0
@@ -309,4 +309,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Sunday 18 December 2022 18:14">Sunday 18 December 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 19 December 2022 00:53">Monday 19 December 2022</span>. Using Julia version 1.8.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
