build based on 08516f6

--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -109,6 +109,7 @@ The following packages will be downloaded:
     libglib-2.74.1             |       h606061b_1         3.1 MB  conda-forge
     libgpg-error-1.45          |       hc0c96e0_0         286 KB  conda-forge
     libiconv-1.17              |       h166bdaf_0         1.4 MB  conda-forge
+    libjpeg-turbo-2.1.4        |       h166bdaf_0         988 KB  conda-forge
     libllvm15-15.0.6           |       h63197d8_0        30.5 MB  conda-forge
     libogg-1.3.4               |       h7f98852_1         206 KB  conda-forge
     libopus-1.3.1              |       h7f98852_1         255 KB  conda-forge
@@ -136,7 +137,7 @@ The following packages will be downloaded:
     openjpeg-2.5.0             |       hfec8fc6_2         344 KB  conda-forge
     packaging-22.0             |     pyhd8ed1ab_0          40 KB  conda-forge
     pcre2-10.40                |       hc3806b6_0         2.3 MB  conda-forge
-    pillow-9.2.0               |  py310h023d228_4        43.0 MB  conda-forge
+    pillow-9.4.0               |  py310h4927cde_0        44.1 MB  conda-forge
     ply-3.11                   |             py_1          44 KB  conda-forge
     pthread-stubs-0.4          |    h36c2ea0_1001           5 KB  conda-forge
     pulseaudio-16.1            |       h126f2b6_0         1.7 MB  conda-forge
@@ -159,7 +160,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       240.5 MB
+                                           Total:       242.6 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -212,6 +213,7 @@ The following NEW packages will be INSTALLED:
   libglib            conda-forge/linux-64::libglib-2.74.1-h606061b_1
   libgpg-error       conda-forge/linux-64::libgpg-error-1.45-hc0c96e0_0
   libiconv           conda-forge/linux-64::libiconv-1.17-h166bdaf_0
+  libjpeg-turbo      conda-forge/linux-64::libjpeg-turbo-2.1.4-h166bdaf_0
   libllvm15          conda-forge/linux-64::libllvm15-15.0.6-h63197d8_0
   libogg             conda-forge/linux-64::libogg-1.3.4-h7f98852_1
   libopus            conda-forge/linux-64::libopus-1.3.1-h7f98852_1
@@ -239,7 +241,7 @@ The following NEW packages will be INSTALLED:
   openjpeg           conda-forge/linux-64::openjpeg-2.5.0-hfec8fc6_2
   packaging          conda-forge/noarch::packaging-22.0-pyhd8ed1ab_0
   pcre2              conda-forge/linux-64::pcre2-10.40-hc3806b6_0
-  pillow             conda-forge/linux-64::pillow-9.2.0-py310h023d228_4
+  pillow             conda-forge/linux-64::pillow-9.4.0-py310h4927cde_0
   ply                conda-forge/noarch::ply-3.11-py_1
   pthread-stubs      conda-forge/linux-64::pthread-stubs-0.4-h36c2ea0_1001
   pulseaudio         conda-forge/linux-64::pulseaudio-16.1-h126f2b6_0
@@ -309,4 +311,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 2 January 2023 12:19">Monday 2 January 2023</span>. Using Julia version 1.8.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Monday 2 January 2023 18:15">Monday 2 January 2023</span>. Using Julia version 1.8.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
